--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,11 +23,15 @@ thiserror = "2.0.18"
 tokio = { version = "1.49.0", features = ["full"] }
 tower = "0.5.3"
 tracing = "0.1"
-tower-http = { version = "0.6.8", features = ["cors", "trace", "compression-br", "compression-gzip"] }
+tower-http = { version = "0.6.8", features = [
+    "cors",
+    "trace",
+    "compression-br",
+    "compression-gzip",
+] }
 
 [dev-dependencies]
-criterion = "0.5"
-serde_yaml = "0.9.34"
+criterion = "0.8.2"
 
 [[bench]]
 name = "event"
