chore(deps): configure workspace dependencies and crates.io publishing
[Purpose]

- 统一管理 workspace 中所有成员的依赖版本
- 为 crates.io 发布配置必要的元数据和链接
- 添加 GitHub Actions 自动发布工作流

[Changes]

- Cargo.toml:
  - 添加 [workspace.package] 统一版本和元数据
  - 添加 [workspace.dependencies] 集中管理所有依赖
  - 配置 crates.io 发布所需的 metadata（description, keywords, categories, rust-version）
  - 使用 workspace = true 引用依赖，简化成员配置

- astrea-macro/Cargo.toml:
  - 更新 description 和 categories
  - 添加 rust-version 最低支持版本
  - 使用 workspace 统一配置

- .github/workflows/release.yml:
  - 创建自动化发布流程
  - 先发布 astrea-macro，等待索引后发布 astrea
  - 自动创建 GitHub Release 并链接到 crates.io 和 docs.rs

[Impact]

- 所有 workspace 成员自动使用相同版本的依赖
- 版本升级只需在 workspace 修改一处
- 支持 `cargo publish` 自动发布到 crates.io
- GitHub tag 触发自动发布流程

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,15 +1,19 @@
 [workspace]
-members = [".", "basic-app"]
+members = [".", "astrea-macro"]
 resolver = "2"
 
-[package]
-name = "astrea"
-version = "0.1.0"
-edition = "2021"
+[workspace.package]
+version = "0.0.1"
+edition = "2024"
+authors = ["TNXG <tnxg@outlook.jp>"]
+license = "MIT"
+repository = "https://github.com/TNXG/astrea"
+homepage = "https://github.com/TNXG/astrea"
+documentation = "https://docs.rs/astrea"
 
-[dependencies]
+[workspace.dependencies]
+# External dependencies / 外部依赖
 anyhow = "1.0.101"
-astrea-macro = { path = "astrea-macro" }
 axum = { version = "0.8.8", features = ["multipart"] }
 bytes = "1.11.1"
 http = "1.4.0"
@@ -23,15 +27,54 @@ thiserror = "2.0.18"
 tokio = { version = "1.49.0", features = ["full"] }
 tower = "0.5.3"
 tracing = "0.1"
-tower-http = { version = "0.6.8", features = [
-    "cors",
-    "trace",
-    "compression-br",
-    "compression-gzip",
-] }
+tower-http = { version = "0.6.8", features = ["cors", "trace", "compression-br", "compression-gzip"] }
+
+# Macro dependencies / 宏依赖
+syn = { version = "2.0", features = ["full", "extra-traits"] }
+quote = "1.0"
+proc-macro2 = "1.0"
+
+# Dev dependencies / 开发依赖
+criterion = "0.8.2"
+
+# Internal dependencies / 内部依赖
+astrea-macro = { path = "astrea-macro" }
+
+[package]
+name = "astrea"
+version.workspace = true
+edition.workspace = true
+authors.workspace = true
+description = "A file-system based routing framework for Axum with automatic code generation"
+license.workspace = true
+repository.workspace = true
+homepage.workspace = true
+documentation.workspace = true
+readme = "README.md"
+keywords = ["axum", "router", "web", "framework", "filesystem"]
+categories = ["web-programming::http-server", "development-tools::build-utils"]
+rust-version = "1.85"
+
+[dependencies]
+anyhow = { workspace = true }
+astrea-macro = { workspace = true }
+axum = { workspace = true }
+bytes = { workspace = true }
+http = { workspace = true }
+http-body = { workspace = true }
+hyper = { workspace = true }
+once_cell = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+serde_urlencoded = { workspace = true }
+thiserror = { workspace = true }
+tokio = { workspace = true }
+tower = { workspace = true }
+tracing = { workspace = true }
+tower-http = { workspace = true }
 
 [dev-dependencies]
-criterion = "0.8.2"
+criterion = { workspace = true }
 
 [[bench]]
 name = "event"
