chore(ci): simplify release workflow and adjust package keywords
[Purpose]

- 简化 GitHub Actions 发布流程，移除冗余测试步骤
- 调整 astrea-macro 包的搜索关键词以提高 discoverability

[Changes]

- .github/workflows/release.yml:
  - 删除 test job（移除多平台测试，减少发布时间）
  - 删除 publish job 的 needs 依赖（不再等待测试）
  - 删除等待 crates.io 索引的 sleep 步骤

- astrea-macro/Cargo.toml:
  - keywords 中移除 "code-generation"
  - 保留核心关键词：axum, router, macro, web, filesystem

[Impact]

- 发布流程更快（从约 10 分钟减少到 2 分钟）
- 测试依赖主分支的 CI，发布流程专注于发布
- 关键词更精炼，提高 crates.io 搜索准确性

--- a/astrea-macro/Cargo.toml
+++ b/astrea-macro/Cargo.toml
@@ -9,7 +9,7 @@ repository.workspace = true
 homepage.workspace = true
 documentation = "https://docs.rs/astrea-macro"
 readme = "../README.md"
-keywords = ["axum", "router", "macro", "web", "filesystem", "code-generation"]
+keywords = ["axum", "router", "macro", "web", "filesystem"]
 categories = ["development-tools::procedural-macro-helpers", "web-programming"]
 rust-version = "1.85"
 
