chore(ci): add error tolerance to cargo publish commands
[Purpose]

- 防止单个包发布失败导致整个工作流中断
- 便于调试发布问题

[Changes]

- .github/workflows/release.yml:
  - 将 `cargo publish --allow-dirty` 改为 `cargo publish || true`
  - 即使发布失败也继续执行（用于调试）

[Impact]

- 发布失败时不会立即中断，可以继续尝试
- 便于在 CI 环境中调试发布问题
- 需要手动检查发布结果以确保成功

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,11 +34,11 @@ jobs:
 
       - name: Publish astrea-macro
         working-directory: ./astrea-macro
-        run: cargo publish --allow-dirty
+        run: cargo publish || true
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
 
       - name: Publish astrea
-        run: cargo publish --allow-dirty
+        run: cargo publish || true
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
