chore(ci): improve release workflow with version sync and error handling
[Purpose]

- 确保 GitHub Actions 发布时自动更新所有依赖的版本号
- 添加智能错误处理，如果包已发布则跳过而非失败
- 使发布流程更健壮，支持重新运行 workflow

[Changes]

- .github/workflows/release.yml:
  - 添加 sed 命令自动更新 astrea-macro 依赖版本号
  - 改进发布命令的错误处理逻辑
  - 检测 "already exists" 错误并优雅跳过
  - 保留其他错误的正常退出行为

- Cargo.toml:
  - astrea-macro 依赖添加明确版本号：version = "0.0.1"
  - 保留 path = "astrea-macro" 用于本地开发

[Impact]

- 发布流程自动化更完善
- 支持多次运行 workflow 而不会因 "already uploaded" 失败
- 版本同步确保依赖一致性

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -38,7 +38,7 @@ proc-macro2 = "1.0"
 criterion = "0.8.2"
 
 # Internal dependencies / 内部依赖
-astrea-macro = { path = "astrea-macro" }
+astrea-macro = { version = "0.0.1", path = "astrea-macro" }
 
 [package]
 name = "astrea"
