--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,6 +27,7 @@ jobs:
         run: |
           VERSION="${{ steps.get_version.outputs.version }}"
           sed -i "s/^version = \".*\"/version = \"$VERSION\"/" Cargo.toml
+          sed -i "s/astrea-macro = { version = \".*\", path/astrea-macro = { version = \"$VERSION\", path/" Cargo.toml
 
       - uses: dtolnay/rust-toolchain@stable
 
@@ -34,11 +35,27 @@ jobs:
 
       - name: Publish astrea-macro
         working-directory: ./astrea-macro
-        run: cargo publish || true
+        run: |
+          OUTPUT=$(cargo publish --allow-dirty 2>&1) || {
+            if echo "$OUTPUT" | grep -q "already exists"; then
+              echo "✓ astrea-macro already published, skipping..."
+            else
+              echo "$OUTPUT" >&2
+              exit 1
+            fi
+          }
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
 
       - name: Publish astrea
-        run: cargo publish || true
+        run: |
+          OUTPUT=$(cargo publish --allow-dirty 2>&1) || {
+            if echo "$OUTPUT" | grep -q "already exists"; then
+              echo "✓ astrea already published, skipping..."
+            else
+              echo "$OUTPUT" >&2
+              exit 1
+            fi
+          }
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
