refactor(core): reorganize modules into subdirectories for better maintainability
[Purpose]

- 提升代码库的可维护性和可导航性
- 解决单文件过于臃肿的问题,遵循模块化设计原则

[Changes]

- 核心模块重构 (`src/lib.rs`):
  - 将 `event`、`extract`、`response` 从单文件拆分为目录结构
  - 保持公共 API 导出不变,确保向后兼容

- `event` 模块:
  - `mod.rs` - 主 Event 类型和公共接口
  - `inner.rs` - 内部实现细节
  - `parse.rs` - 请求解析逻辑

- `extract` 模块:
  - `body.rs` - 请求体提取
  - `headers.rs` - 请求头提取
  - `metadata.rs` - 元数据提取
  - `params.rs` - 路径参数提取
  - `query.rs` - 查询参数提取
  - `state.rs` - 应用状态提取
  - `tests.rs` - 模块测试

- `response` 模块:
  - `builders.rs` - 响应构建器(json/text/html/bytes 等)
  - `stream.rs` - 流式响应处理

- CI/CD 优化 (`.github/workflows/release.yml`):
  - 添加 `cargo update -w` 步骤,确保 workspace 依赖版本自动同步

[Impact]

- ✅ 提升代码可读性和可维护性,模块职责更加清晰
- ✅ 保持向后兼容性,公共 API 未发生变化
- ✅ 改善 release 流程的可靠性

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,6 +28,7 @@ jobs:
           VERSION="${{ steps.get_version.outputs.version }}"
           sed -i "s/^version = \".*\"/version = \"$VERSION\"/" Cargo.toml
           sed -i "s/astrea-macro = { version = \".*\", path/astrea-macro = { version = \"$VERSION\", path/" Cargo.toml
+          cargo update -w
 
       - uses: dtolnay/rust-toolchain@stable
 
