feat(openapi, macro): add OpenAPI support and refactor codebase structure
[Purpose]

- 引入 OpenAPI 规范支持，为自动生成 API 文档奠定基础
- 重组宏代码结构以提升可维护性，将单一 codegen.rs 模块拆分为功能子目录
- 添加 comfy-table 依赖以支持编译时 TUI 路由表输出，提升开发体验

[Changes]

- **astrea-macro/src/**:
  - 将 `codegen.rs` (284行) 拆分为 `codegen/` 子目录，包含 `mod.rs`、`router.rs`、`scope.rs`、`openapi.rs`
  - 新增 `openapi/` 模块，包含 `mod.rs`、`visitor.rs`、`helpers.rs`、`doc.rs`、`spec.rs`、`types.rs`、`registry.rs`、`swagger.rs`
  - `lib.rs`: 新增 `#[cfg(feature = "openapi")] mod openapi;` 条件编译导入
  - `route.rs`: 在 `#[route]` 宏中新增 `__openapi_meta()` 函数生成逻辑，支持运行时元数据提取
  - `scanner.rs`: 引入 `RouteDetailLog` 和 `MiddlewareDetailLog` 结构体以支持 TUI 显示，重构日志收集函数

- **src/**:
  - 新增 `openapi/` 模块，包含 `mod.rs`、`registry.rs`、`spec.rs`、`types.rs`、`swagger.rs`
  - `event/mod.rs`: 调整导入路径以适应模块重组
  - `extract/body.rs`: 代码格式调整
  - `lib.rs`: 新增 `pub mod openapi;` 模块导出
  - `response/builders.rs`: 代码格式调整

- **Cargo.toml**:
  - 新增 `[features] openapi = ["astrea-macro/openapi"]` feature flag
  - `[dependencies]`: 新增 `comfy-table = "7.2.2"` 用于 TUI 输出
  - `[workspace.dependencies]`: `syn` 版本固定为 `2.0.115`

- **astrea-macro/Cargo.toml**:
  - 新增 `[features] openapi = ["syn/visit", "dep:phf"]` feature flag
  - `[dependencies]`: 新增 `phf = { version = "0.11", features = ["macros"], optional = true }` 用于编译时字符串哈希

- **tests/**:
  - 新增 `openapi_tests.rs` 测试文件
  - `response_tests.rs`: 移除未使用的导入

- **文档**:
  - `README.md`: 大幅重构（+457/-288行），改进文档结构和可读性
  - 删除 `README_ZH.md`，改用 `README.zh-CN.md` 命名规范

- **Cargo.lock**: 同步新增依赖锁文件（`comfy-table`、`phf` 及其传递依赖）

[Impact]

- **向后兼容性**: 破坏性变更—OpenAPI 功能默认禁用，需启用 `openapi` feature
- **依赖影响**: 新增 `comfy-table` (7.2.2) 和 `phf` (0.11) 运行时/编译时依赖
- **性能影响**: comfy-table 仅在编译时 TUI 输出使用，不影响运行时性能
- **后续任务**:
  - OpenAPI 规范生成器需进一步测试
  - 考虑添加 `comfy-table` 到 workspace.dependencies 以统一版本管理（当前仅在主包声明）

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,7 +30,7 @@ tracing = "0.1"
 tower-http = { version = "0.6.8", features = ["cors", "trace", "compression-br", "compression-gzip"] }
 
 # Macro dependencies / 宏依赖
-syn = { version = "2.0", features = ["full", "extra-traits"] }
+syn = { version = "2.0.115", features = ["full", "extra-traits"] }
 quote = "1.0"
 proc-macro2 = "1.0"
 
@@ -55,6 +55,9 @@ keywords = ["axum", "router", "web", "framework", "filesystem"]
 categories = ["web-programming::http-server", "development-tools::build-utils"]
 rust-version = "1.85"
 
+[features]
+openapi = ["astrea-macro/openapi"]
+
 [dependencies]
 anyhow = { workspace = true }
 astrea-macro = { workspace = true }
@@ -72,6 +75,7 @@ tokio = { workspace = true }
 tower = { workspace = true }
 tracing = { workspace = true }
 tower-http = { workspace = true }
+comfy-table = "7.2.2"
 
 [dev-dependencies]
 criterion = { workspace = true }
