--- a/astrea-macro/Cargo.toml
+++ b/astrea-macro/Cargo.toml
@@ -16,7 +16,11 @@ rust-version = "1.85"
 [lib]
 proc-macro = true
 
+[features]
+openapi = ["syn/visit", "dep:phf"]
+
 [dependencies]
 syn = { workspace = true }
 quote = { workspace = true }
 proc-macro2 = { workspace = true }
+phf = { version = "0.11", features = ["macros"], optional = true }
