--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,13 @@ thiserror = "2.0.18"
 tokio = { version = "1.49.0", features = ["full"] }
 tower = "0.5.3"
 tracing = "0.1"
-tower-http = { version = "0.6.8", features = ["cors", "trace", "compression-br", "compression-gzip"] }
+tower-http = { version = "0.6.8", features = [
+    "cors",
+    "trace",
+    "compression-br",
+    "compression-gzip",
+] }
+comfy-table = "7.2.2"
 
 # Macro dependencies / 宏依赖
 syn = { version = "2.0.115", features = ["full", "extra-traits"] }
@@ -75,7 +81,7 @@ tokio = { workspace = true }
 tower = { workspace = true }
 tracing = { workspace = true }
 tower-http = { workspace = true }
-comfy-table = "7.2.2"
+comfy-table = { workspace = true }
 
 [dev-dependencies]
 criterion = { workspace = true }
